# radius

./: .gitignore  .pre-commit-config.yaml  README.md  fstester.py  generate-requirements.sh  pyproject.toml  radius_report.html  radius_report.json  requirements-dev.txt  requirements.txt  runner.py  setup-dev.sh  test_cases_to_be_automated_1.1v (1).csv
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
config/: testbed_conf.yml
framework/ca_log_handler/: log_pattern_listener.py  remote_log_streamer.py
framework/configurator/: configurator.py  eyesight_factory.py  requires.py
framework/connection/: connection_client.py  connection_pool.py  ssh_client.py  winrm_client.py
framework/decorator/: annotation.py  prametrizor.py
framework/log/: logger.py
framework/report/: html_report.py  test_result.py
lib/ca/: ca.py  ca_common_base.py  em.py
lib/external_servers/: ocsp_server.py
lib/passthrough/: enums.py  lan_profile_builder.py  passthrough_base.py  utils.py  windows_passthrough.py
lib/plugin/: radius.py
lib/plugin/radius/: dot1x_status_parser.py  enums.py  mar_bulk_ops.py  pre_admission_rule.py  radius.py  radius_base.py  radius_plugin_settings.py
lib/plugin/radius/models/: eap_tls_config.py  mab_config.py  mar_entry.py  peap_config.py
lib/switch/: action.py  cisco_ios.py  cisco_ios_radius_configure.py  radius_configure_base.py  radius_factory.py  switch_base.py
lib/utils/: csv.py  hostinfo.py  mac.py  vlan_mapping.py
resources/policy/: simple_condition_base_policy.xml
resources/radius/certificates/: Dot1x-CLT-G.pfx
resources/radius/certificates/CA2/CounterACTFiles/: ocsp2.crt
resources/radius/nic_profiles/: lan_profile_eap_tls_config.xml  lan_profile_eap_ttls_config.xml  lan_profile_mab_config.xml  lan_profile_peap_config.xml  lan_profile_peap_eap_tls_config.xml
scripts/: git_stats.py  git_stats_combined.py  git_test_case_authors.py  mar_bulk_import.pl  mar_bulk_remove.pl  radius_nic_PEAP_credentials_config.ps1
test/: sample_test.py
test/radius/: radius_test.py  radius_test_base.py
test_config/radius/: radius.yml
tests/: sample_test.py  test_base.py
tests/fs_test_common_base/: test_base.py
tests/radius/: radius_test.py  radius_test_base.py
tests/radius/functional/: radius_functional_dot1x.py  radius_functional_eap_tls.py  radius_functional_eap_tls_T1316958.py  radius_functional_eap_tls_T1316959.py  radius_functional_eap_ttls.py  radius_functional_mab.py  radius_functional_peap.py  radius_functional_peap_eap_tls.py  radius_functional_sanity.py  radius_functional_tls_version.py
tests/radius/functional/base_classes/: radius_certificates_test_base.py  radius_eap_tls_test_base.py  radius_eap_ttls_test_base.py  radius_mab_test_base.py  radius_peap_eap_tls_test_base.py  radius_peap_test_base.py  radius_tls_setup_base.py
web/: dashboard.py
(+34 files in other folders)
