[project]
name = "fstester"
version = "0.1.0"
description = "ForeScout automation testing framework"
requires-python = ">=3.7"
authors = [
    {name = "ForeScout Automation Team", email = "qa@forescout.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "paramiko>=4.0.0",
    "yml==0.0.1",
    "pyyaml>=6.0",
    "netmiko>=4.6.0",
    "pywinrm>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
    "pip-tools>=7.0.0",
]
windows = [
    # pywinrm is already in main dependencies for Windows Remote Management
]

[tool.black]
line-length = 130

[tool.isort]
profile = "black"
line_length = 130
known_first_party = ["framework", "lib", "test"]

[tool.ruff]
line-length = 130
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "N",   # pep8-naming
    "C90", # mccabe complexity
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit (security)
]
ignore = [
    "S101", # assert used (common in tests)
    "B008", # function calls in argument defaults
]

# Naming convention rules
[tool.ruff.lint.pep8-naming]
# Function names should be lowercase with underscores
# Class names should be CapitalizedWords
# Variable names should be lowercase with underscores
# Constant names should be UPPER_CASE

# Custom naming patterns (optional)
classmethod-decorators = ["classmethod"]
staticmethod-decorators = ["staticmethod"]

# Pylint - focus on logic issues, let Ruff handle style
[tool.pylint.messages_control]
disable = [
    "C0103", # invalid-name (handled by Ruff N rules)
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "ip", "db", "os", "fs"]

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true
